# breadglx

./: Cargo.toml  README.md  build.rs  err.txt
.github/workflows/: ci.yml
bindgen_sources/: dri_interface.h
examples/: basic.rs  cube.rs
src/: config.rs  cstr.rs  dll.rs  lib.rs  mesa.rs  offload.rs  util.rs
src/auto/: mod.rs
src/config/: compatible.rs  construct.rs  load.rs  mod.rs  rules.rs  values.rs
src/context/: attrib.rs  dispatch.rs  mod.rs
src/display/: dispatch.rs  mod.rs
src/drawable/: mod.rs
src/dri/: config.rs  extensions.rs  ffi.rs  mod.rs  rules.rs
src/dri/dri2/: context.rs  display.rs  mod.rs  screen.rs
src/dri/dri3/: context.rs  display.rs  drawable.rs  loader_extensions.rs  mod.rs  screen.rs
src/dri/load/: mod.rs  pci_table.rs
src/indirect/: context.rs  display.rs  screen.rs
src/screen/: config.rs  dispatch.rs  mod.rs
src/util/: fence.rs  mod.rs
