[package]
name = "breadglx"
version = "0.0.1"
authors = ["John 'not_a_seagull' Nunley <jtnunley01@gmail.com>"]
edition = "2018"

[dependencies]
ahash = "0.6.2"
async-lock = { version = "2.3.0", optional = true }
blocking = { version = "1.0.2", optional = true }
breadx = { path = "../breadx", features = ["glx"] }
cfg-if = "1"
dashmap = "4.0.1"
dlopen = "0.1.8"
futures-lite = { version = "1.11.2", optional = true }
libc = "0.2.81"
log = "0.4"
once_cell = { version = "1.5.2" }
tinyvec = { version = "1.1.0", features = ["alloc"] }

[build-dependencies]
memchr = "2.3.4"

[dev-dependencies]
env_logger = "0.8"

[features]
default = ["dri3"]
async = ["breadx/async", "async-lock", "blocking", "futures-lite"]
dri = ["breadx/dri2"]
dri3 = ["breadx/dri3", "breadx/present", "dri"]
